# python-client

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.py
newsdataapi/: newsdataapi_client.py
src/newsdataapi/: __init__.py  client.py  constants.py  csv_export.py  exceptions.py
tests/: conftest.py  test_integration.py  test_unit.py
